--- a/rules/codelingo/code-review-comments/go-error-fmt/codelingo.yaml
+++ b/rules/codelingo/code-review-comments/go-error-fmt/codelingo.yaml
@@ -74,8 +74,8 @@ rules:
         title: Go Error Format
         body: |
           Error strings should not be capitalized (unless beginning with proper nouns 
-          or acronyms) or end with punctuation. For instance, use fmt.Errorf("something bad") 
-          instead of fmt.Errorf("Something bad"), so that log.Printf("Reading %s: %v", filename, err) 
+          or acronyms) or end with punctuation. For instance, use errors.New("something bad") 
+          instead of errors.New("Something bad"), so that log.Printf("Reading %s: %v", filename, err) 
           formats without a spurious capital letter mid-message. This does not apply to logging, 
           which is implicitly line-oriented and not combined inside other messages.
 
@@ -85,7 +85,7 @@ rules:
           func ReadConfig(filename string) (map[string]string, error) {
             data, err := ioutil.ReadFile(filename)
             if err != nil {
-              return nil, fmt.Errorf("%v: Error reading config file.", err)
+              return nil, errors.New("Error reading config file.")
             }
 
             var config map[string]string
@@ -103,7 +103,7 @@ rules:
           func ReadConfig(filename string) (map[string]string, error) {
             data, err := ioutil.ReadFile(filename)
             if err != nil {
-              return nil, fmt.Errorf("%v: error reading config file", err)
+              return nil, errors.New("error reading config file")
             }
 
             var config map[string]string
