fix for multiline review comments.

--- a/rules/codelingo/code-review-comments/same-receiver-name/codelingo.yaml
+++ b/rules/codelingo/code-review-comments/same-receiver-name/codelingo.yaml
@@ -53,10 +53,14 @@ tenets:
           }
           ```
       codelingo/review:
-        comment: If you call the receiver `{{receiverName1}}` in `{{methodName1}}` method, don't call 
-        it `{{receiverName2}}` in `{{methodName2}}` method. Be consistent. From [Code Review Comments](https://github.com/golang/go/wiki/CodeReviewComments#receiver-names).
+        comment: |
+          If you call the receiver `{{receiverName1}}` in `{{methodName1}}` method,
+          don't call it `{{receiverName2}}` in `{{methodName2}}` method. Be consistent.
+
+          From [Code Review Comments](https://github.com/golang/go/wiki/CodeReviewComments#receiver-names).
     query: |
       import codelingo/ast/go
+
       go.dir(depth = any):
         go.func_decl(depth = any):
           go.field_list:
